# CS7643-DL-project

./: .gitignore  autoencoder.py  pyproject.toml  requirements.txt  run.py
Colab Noteboks/: CS7643_Group_Project.ipynb  README.md  result_analysis.ipynb
datasets/: get_dataset.sh  get_open_anomaly_datasets.sh  preprocess_nab.py  requirements.txt
results_junkbox/autoencoder_results/odd/: annthyroid.csv_autoencoder.csv  arrhythmia.csv_autoencoder.csv  breastw.csv_autoencoder.csv  cardio.csv_autoencoder.csv  glass.csv_autoencoder.csv  ionosphere.csv_autoencoder.csv  letter.csv_autoencoder.csv  lympho.csv_autoencoder.csv  mammography.csv_autoencoder.csv  musk.csv_autoencoder.csv  optdigits.csv_autoencoder.csv  pendigits.csv_autoencoder.csv  pima.csv_autoencoder.csv  satellite.csv_autoencoder.csv  satimage-2.csv_autoencoder.csv  shuttle.csv_autoencoder.csv  thyroid.csv_autoencoder.csv  vertebral.csv_autoencoder.csv  vowels.csv_autoencoder.csv  wbc.csv_autoencoder.csv  wine.csv_autoencoder.csv
results_junkbox/autoencoder_results/yahoo/A1Benchmark/: real_1.csv_autoencoder.csv  real_10.csv_autoencoder.csv  real_11.csv_autoencoder.csv  real_12.csv_autoencoder.csv  real_13.csv_autoencoder.csv  real_14.csv_autoencoder.csv  real_15.csv_autoencoder.csv  real_16.csv_autoencoder.csv  real_17.csv_autoencoder.csv  real_18.csv_autoencoder.csv  real_19.csv_autoencoder.csv  real_2.csv_autoencoder.csv  real_20.csv_autoencoder.csv  real_21.csv_autoencoder.csv  real_22.csv_autoencoder.csv  real_23.csv_autoencoder.csv  real_24.csv_autoencoder.csv  real_25.csv_autoencoder.csv  (+49 more)
