[tool.poetry]
name = "cs7643-dl-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "cs7643_dl_project"}]

[tool.poetry.dependencies]
python = "^3.9, <3.12"
seaborn = "^0.12.2"
black = "^23.3.0"
mypy = "^1.2.0"
circlify = "^0.15.0"
scikit-learn = "^1.2.2"
gluonts = "^0.12.7"
mxnet = "^1.9.1"
numpy = ">=1.19,<2.0"
keras = "^2.12.0"
tensorflow = "^2.12.0"
pandas = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
